[package]
name = "grepolis_api_reflector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bytes = "1.10.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["gzip", "deflate"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "json"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
